--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 # src/main/resources/application.yaml
 spring:
   profiles:
-    active: dev
+    active:
 
   datasource:
     url: jdbc:mysql://localhost:3306/bluffing
@@ -34,6 +34,11 @@ server:
       force: true
       enabled: true
 
+logging:
+  level:
+    org.springframework.web.socket: DEBUG
+    org.springframework.messaging: DEBUG
+    org.springframework.security: DEBUG
 
 jwt:
   issuer: "bluffing-api"
