--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - feat/jam759 # 이 브랜치에 푸시될 때만 동작
+      - feat/jam759 # 배포할 브랜치
 
 jobs:
   deploy:
@@ -22,8 +22,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
             cd ~/bluffing-backend/2025_SEASONTHON_TEAM_87_BE
-            git fetch origin feat/jam759
-            git reset --hard origin/feat/jam759
+            git pull origin feat/jam759
             ./gradlew clean build
             # 기존 실행 프로세스 종료
             pkill -f 'java -jar build/libs/bluffing-0.0.1-SNAPSHOT.jar' || true
