--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update # 운영 환경에서는 create 대신 update 또는 validate 사용
+      ddl-auto: create # 운영 환경에서는 create 대신 update 또는 validate 사용
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
